--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,7 @@
 * spark_version: "2.0.2-bin-hadoop2.7"
 * Anaconda3-4.3.1-Linux-x86_64.sh (python3)
 * Jupyter Scala binaries for Scala 2.11 when using python3
+* The Anacoda https://anaconda.org/r/r-essentials[R Essentials bundle]
 
 === License
 The MIT License (MIT).  See LICENSE.adoc
