--- a/README.adoc
+++ b/README.adoc
@@ -57,10 +57,13 @@ $ gcloud compute ssh jupyter \
 
 # If you want to install R packages, you may want to open an R notebook and execute:
 system("mkdir -p ~/anaconda3/lib/R/library", intern=TRUE)
-# Then, in the first cell put:
+system("echo R_LIBS=~/anaconda3/lib/R/library > ~/.Renviron", intern=TRUE)
+# Then do a Kernel>Restart and in the first cell of your notebook put:
 .libPaths("~/anaconda3/lib/R/library")
 # You can then install R packages as follows:
 install.packages("png","~/anaconda3/lib/R/library")
+# or 
+/usr/lib/anaconda/lib/R/bin/R CMD INSTALL --library=~/anaconda3/lib/R/library brocolors_0.1.tar.gz
 ----
 
 .Other Notes:
